cli/tests/snapshot/inputs/errors/array_at_empty_array.ncl
# capture = 'stderr'
# command = []
std.array.at 0 []
